bk_ida/gccida/c1/put_addressof_into_stack
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3449:40: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
void  put_addressof_into_stack( rtx r, hash_table_0 *ht) 
                                       ^~~~~~~~~~~~
                                       hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3449:7: error: conflicting types for 'put_addressof_into_stack'
void  put_addressof_into_stack( rtx r, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:292:13: note: previous declaration is here
static void put_addressof_into_stack PARAMS ((rtx, struct hash_table *));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3454:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3461:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)r[1].fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3465:21: error: expected expression
v6 = *( tree_node **)( v4.rtwint + 8); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3465:9: error: use of undeclared identifier 'tree_node'
v6 = *( tree_node **)( v4.rtwint + 8); 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3487:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3487:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3488:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/function.c:3488:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), 
                 ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/put_addressof_into_stack/src/obj/function.o] Error 1
